# llama-grpc-server

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  client.py  install.sh
llama-grpc-py-client/: .gitignore  client.py  interactive.py  llama_pb2.py  llama_pb2_grpc.py
protos/: llama.proto
scripts/: start_server.sh
src/: llama_grpc_service.cpp  llama_grpc_service.h  main.cpp
